Bug #16396 Events: Distant-future dates become past dates.
Submitted: 12 Jan 2006 4:34 Modified: 17 Mar 2006 16:45
Reporter: Peter Gulutzan
Status: Closed
Category:Server: SP Severity:S3 (Non-critical)
Version:5.1 OS:Linux (linux)
Assigned to: Andrey Hristov Target Version:

[12 Jan 2006 4:34] Peter Gulutzan
Description:
I make an event which is in the distant future,
i.e. year > 2037, then I look for its description
in mysql.event. I see that the year has changed
to the start of the Unix epoch, 1970-01-01.

How to repeat:
mysql> create event e_55 on schedule at 99990101000000 do drop table t//
Query OK, 1 row affected (0.00 sec)

mysql> select execute_at from mysql.event where name='e_55'//
+---------------------+
| execute_at          |
+---------------------+
| 1970-01-01 00:00:00 |
+---------------------+
1 row in set (0.00 sec)
[3 Mar 2006 1:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3409
[17 Mar 2006 11:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3918
[17 Mar 2006 15:13] Andrey Hristov
Fixed in 5.1.8 . As of this version dates past the end of the unix epoch are not supported
(should be mentioned). Once MySQL supports timestamps past year 2037 this limitation will
be lifted.
[17 Mar 2006 16:45] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix and feature change in 5.1.8 changelog and Events Limitations section of
5.1 Manual.