fix for bug #16396: Events: Distant-future dates become past dates WL#1034 (Internal CRON) timestamps does not support > y2038